# phonetooth

./: .tm_project.cache  ChangeLog  Documentation.md  Makefile.am  ProjectHome.md  README  Screenshots.md  SupportedPhones.md  autogen.sh  configure.ac  contacts.py  contactsdialog.py  mainwindow.py  mobilephone.py  phonetooth  phonetooth.glade  phonetooth.py  phonetoothui  preferencesdialog.py  setup.py  testsuite.py
data/: phonetooth.desktop.in
locale/nl/LC_MESSAGES/: phonetooth.mo
m4/: ChangeLog
phonetooth/: bit7alphabet.py  bit7alphabettest.py  bluetoothdiscovery.py  contacts.py  contactsdialog.py  filetransfer.py  mainwindow.py  mobilephone.py  mobilephonefactory.py  mobilephonetest.py  phonebrowser.py  phonebrowserhandler.py  preferences.py  preferencesdialog.py  preferencestest.py  sendmessagedialog.py  sms.py  smstest.py  transferinfo.py  transfermanager.py  transfermanagertest.py
po/: LINGUAS  POTFILES.in  nl.po  pl.po
pyphonetooth/: bluetoothdiscovery.py  contactsdialog.py  mainwindow.py  mobilephone.py  phonetooth  preferencesdialog.py
tags/phonetooth-0.1.0/: Makefile.am
tags/phonetooth-0.1.1/: ChangeLog
tags/phonetooth-0.1.1/phonetooth/: mainwindow.py  preferencesdialog.py
tags/phonetooth-0.1.2/: ChangeLog  configure.ac
tags/phonetooth-0.1.2/data/: phonetooth.desktop.in
tags/phonetooth-0.1.2/ui/: phonetooth.glade
tags/phonetooth-0.2.0/: configure.ac
tags/phonetooth-0.2.0/phonetooth/: contactsdialog.py  mobilephonegammu.py  preferencesdialog.py
tags/phonetooth-0.2.0/ui/: phonetooth.glade
tags/phonetooth-0.2.1/: Makefile.am
tags/phonetooth-0.2.1/phonetooth/: mobilephone.py  mobilephonetest.py
tags/phonetooth-0.2.1/po/: nl.po
tags/phonetooth-0.2.2/: README  configure.ac
tags/phonetooth-0.2.2/locale/nl/LC_MESSAGES/: phonetooth.mo
tags/phonetooth-0.2.2/phonetooth/: bit7alphabet.py  bluetoothconnectiontest.py  contacts.py  mainwindow.py  mobilephonefactory.py  mobilephonetest.py  preferencesdialog.py
tags/phonetooth-0.3.0/: ChangeLog  Makefile.am  configure.ac  phonetoothui  testsuite.py
tags/phonetooth-0.3.0/phonetooth/: __init__.py  bit7alphabettest.py  bluetoothconnection.py  bluetoothdiscovery.py  contactstest.py  preferencesdialog.py  preferencestest.py  serialconnection.py  sms.py
tags/phonetooth-0.3.0/po/: nl.po
tags/phonetooth-0.4.0/: .project  ChangeLog
tags/phonetooth-0.4.0/phonetooth/: mainwindow.py  mergecontactsdialog.py  mobilephonegammu.py  preferences.py  selectcontactsdialog.py  sendmessagedialog.py  sms.py  smstest.py
tags/phonetooth-0.4.0/po/: nl.po  pl.po
tags/phonetooth-0.4.1/: ChangeLog  configure.ac  phonetoothui
tags/phonetooth-0.4.1/phonetooth/: bluetoothdiscovery.py  filetransferdialog.py  sms.py
tags/phonetooth-0.4.1/po/: Makevars  pl.po
tags/phonetooth-0.5.0/: autogen.sh
tags/phonetooth-0.5.0/phonetooth/: contacts.py  contactstest.py  filecollection.py  filetransferdialog.py  phonebrowser.py  sendmessagedialog.py  transferinfo.py  transferinfotest.py  transfermanager.py
tags/phonetooth-0.5.1/: configure.ac
tags/phonetooth-0.5.1/locale/nl/LC_MESSAGES/: phonetooth.mo
tags/phonetooth-0.5.1/phonetooth/: bluetoothconnection.py  filecollectiontest.py  filetransfer.py  mobilephonetest.py  phonebrowserstub.py  phonebrowsertest.py  preferencesdialog.py  preferencestest.py  smstest.py
tags/phonetooth-0.5.1/po/: POTFILES.in  nl.po
trunk/: ChangeLog  MANIFEST.in  Makefile.am  autogen.sh  configure.ac  contacts.py  contactsdialog.py  mainwindow.py  mobilephone.py  phonetooth  phonetooth.glade  phonetoothui  preferencesdialog.py  setup.py  testsuite.py
trunk/phonetooth/: bluetoothconnection.py  bluetoothdiscovery.py  contactsdialog.py  filetransfer.py  mainwindow.py  messageinput.py  mobilephone.py  mobilephonefactory.py  mobilephonegammu.py  mobilephonetest.py  phonebrowser.py  phonebrowserhandler.py  preferences.py  preferencesdialog.py  preferencestest.py  sms.py  smstest.py  transferinfo.py  transfermanager.py  transfermanagertest.py
trunk/po/: POTFILES.in  nl.po  pl.po
trunk/pyphonetooth/: bluetoothdiscovery.py  constants.py.in  contactsdialog.py  mainwindow.py  mobilephone.py  preferencesdialog.py
trunk/ui/: phonetooth.glade
ui/: phonetooth.glade
wiki/: Documentation.wiki  Screenshots.wiki  SupportedPhones.wiki  phonetooth.wiki  screenshots.wiki
